[project]
name = "ai-agent"
version = "0.1.0"
description = "An AI Agent to automate everday tasks"
authors = [
    {name = "Mohamed Yaser",email = "mohamedyaser.315@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
